Added additional sensors

--- a/voltronic_mqtt.yaml
+++ b/voltronic_mqtt.yaml
@@ -68,6 +68,20 @@ mqtt:
     - name: "voltronic-inverter_status"
       state_topic: "/garage/inverter"
       value_template: "{{ value_json.inverter_status}}"
+    - name: "voltronic-battery-voltage-offset-fan"
+      state_topic: "/garage/inverter"
+      unit_of_measurement: "V"
+      value_template: "{{ value_json.battery_voltage_offset_fan}}"
+    - name: "voltronic-eeprom_version"
+      state_topic: "/garage/inverter"
+      value_template: "{{ value_json.eeprom-version}"
+    - name: "voltronic-pv_in_power"
+      state_topic: "/garage/inverter"
+      unit_of_measurement: "W"
+      value_template: "{{ value_json.pv-in-power}"
+    - name: "voltronic-device-status"
+      state_topic: "/garage/inverter"
+      value_template: "{{ value_json.device_status}"
     - name: "voltronic-mode"
       state_topic: "/garage/inverter"
       value_template: "{{ value_json.mode}}"
