--- a/voltronic_mqtt.yaml
+++ b/voltronic_mqtt.yaml
@@ -61,24 +61,24 @@ mqtt:
       state_topic: "/garage/inverter"
       unit_of_measurement: "V"
       value_template: "{{ value_json.battery_voltage_scc}}"
-    - name: "voltronic-discharge_current"
+    - name: "voltronic-discharge-current"
       state_topic: "/garage/inverter"
       unit_of_measurement: "A"
       value_template: "{{ value_json.discharge_current}}"
-    - name: "voltronic-inverter_status"
+    - name: "voltronic-inverter-status"
       state_topic: "/garage/inverter"
       value_template: "{{ value_json.inverter_status}}"
     - name: "voltronic-battery-voltage-offset-fan"
       state_topic: "/garage/inverter"
       unit_of_measurement: "V"
       value_template: "{{ value_json.battery_voltage_offset_fan}}"
-    - name: "voltronic-eeprom_version"
+    - name: "voltronic-eeprom-version"
       state_topic: "/garage/inverter"
-      value_template: "{{ value_json.eeprom-version}"
-    - name: "voltronic-pv_in_power"
+      value_template: "{{ value_json.eeprom_version}"
+    - name: "voltronic-pv-in-power"
       state_topic: "/garage/inverter"
       unit_of_measurement: "W"
-      value_template: "{{ value_json.pv-in-power}"
+      value_template: "{{ value_json.pv_in_power}"
     - name: "voltronic-device-status"
       state_topic: "/garage/inverter"
       value_template: "{{ value_json.device_status}"
