fix curly brackets

--- a/voltronic_mqtt.yaml
+++ b/voltronic_mqtt.yaml
@@ -74,14 +74,14 @@ mqtt:
       value_template: "{{ value_json.battery_voltage_offset_fan}}"
     - name: "voltronic-eeprom-version"
       state_topic: "/garage/inverter"
-      value_template: "{{ value_json.eeprom_version}"
+      value_template: "{{ value_json.eeprom_version}}"
     - name: "voltronic-pv-in-power"
       state_topic: "/garage/inverter"
       unit_of_measurement: "W"
-      value_template: "{{ value_json.pv_in_power}"
+      value_template: "{{ value_json.pv_in_power}}"
     - name: "voltronic-device-status"
       state_topic: "/garage/inverter"
-      value_template: "{{ value_json.device_status}"
+      value_template: "{{ value_json.device_status}}"
     - name: "voltronic-mode"
       state_topic: "/garage/inverter"
       value_template: "{{ value_json.mode}}"
