--- a/voltronic_mqtt.yaml
+++ b/voltronic_mqtt.yaml
@@ -92,21 +92,25 @@ mqtt:
       state_topic: "/garage/inverter"
       unit_of_measurement: "W"
       device_class: power
+      force_update: true
       value_template: "{{ value_json.pv_input_current * value_json.pv_input_voltage}}"
     - name: "voltronic-battery-discharge-power"
       state_topic: "/garage/inverter"
       unit_of_measurement: "W"
       device_class: power
+      force_update: true
       value_template: "{{ value_json.battery_voltage * value_json.discharge_current}}"
     - name: "voltronic-battery-charge-power"
       state_topic: "/garage/inverter"
       unit_of_measurement: "W"
       device_class: power
+      force_update: true
       value_template: "{{ value_json.battery_voltage * value_json.charge_current}}"
     - name: "voltronic-grid-active-power"
       state_topic: "/garage/inverter"
       unit_of_measurement: "W"
       device_class: power
+      force_update: true
       value_template: |-
         {% if value_json.grid_voltage > 0 %}
           {% if (value_json.inverter_active_power + (value_json.battery_voltage * value_json.charge_current)) - (value_json.pv_in_power + (value_json.battery_voltage * value_json.discharge_current)) < 0 %}
@@ -121,11 +125,13 @@ mqtt:
       state_topic: "/garage/inverter"
       unit_of_measurement: "W"
       device_class: power
+      force_update: true
       value_template: "{{value_json.pv_in_power - (value_json.battery_voltage * value_json.charge_current)}}"
     - name: "voltronic-pv-battery-charge"
       state_topic: "/garage/inverter"
       unit_of_measurement: "W"
       device_class: power
+      force_update: true
       value_template: "{{value_json.battery_voltage * value_json.pv_input_current}}"
     - name: "voltronic-charger-source-priority"
       state_topic: "/garage/inverter"
